--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="div-block-62">
         <img src="./SALS_files/tap-and-hold6.gif" loading="lazy" alt="" class="image-30">
         <div class="text-block-56-copy-copy-copy" style="padding-top:0px;margin-top:-20px"><span class="text-span-21" style="color:#ff7f75">PRESS</span> <span style="color:#333333">and</span> <span class="text-span-22" style="color:#ff7f75">HOLD</span> <span style="color:#333333">the button</span><span></span></div>
-        <div class="div-block-72"><a href="https://bit.ly/SIMPLYSALFINDS" target="_blank" class="button-2-prime-deals-v2-copy w-button">See Links 👉</a></div>
+        <div class="div-block-72"><a href="http://bit.ly/REDPANDAFINDS" target="_blank" class="button-2-prime-deals-v2-copy w-button">See Links 👉</a></div>
       </div>
     </div>
   </div>
